--- a/client/views/routine_exercise/show.html
+++ b/client/views/routine_exercise/show.html
@@ -3,20 +3,21 @@
     <div class="container">
       <h1 class="header__title">Exercício</h1>
 
-      {{#if execution routineExercise.execution 0}}
-        <a class="nav__btn nav__btn--left btn--back ion-android-arrow-back" href="#"></a>
-      {{/if}}
-
       {{#if authorized 2}}
-      <a class="nav__btn nav__btn--right nav-action__btn--open ion-android-more-vertical" href="#"></a>
+        <a class="nav__btn nav__btn--left btn--back ion-android-arrow-back" href="#"></a>
+        <a class="nav__btn nav__btn--right nav-action__btn--open ion-android-more-vertical" href="#"></a>
 
-      <div class="nav-action">
-        <ul class="nav-action__list">
-          <li class="nav-action__item">
-            <a class="nav-action__link" href="/routine-exercise/edit/{{_id}}">Editar</a>
-          </li>
-        </ul>
-      </div>
+        <div class="nav-action">
+          <ul class="nav-action__list">
+            <li class="nav-action__item">
+              <a class="nav-action__link" href="/routine-exercise/edit/{{_id}}">Editar</a>
+            </li>
+          </ul>
+        </div>
+      {{else}}
+        {{#if execution routineExercise.execution 0}}
+          <a class="nav__btn nav__btn--left btn--back ion-android-arrow-back" href="#"></a>
+        {{/if}}
       {{/if}}
     </div>
   </header>
@@ -26,6 +27,12 @@
       <section class="section">
         <h1 class="section__title">
           {{routineExercise.exerciseObj.name}}
+
+          {{#unless authorized 2}}
+            {{#if routineExercise.done}}
+              <span class="icon--right ion-android-done"></span>
+            {{/if}}
+          {{/unless}}
         </h1>
 
         <div class="section__gallery">
@@ -85,23 +92,31 @@
         </div>
       </section>
 
-      <footer class="footer">
-        {{#if execution routineExercise.execution 0}}
-          <a class="btn execution__btn--initial" href="#">Iniciar</a>
-        {{else}}
-          <a class="btn btn--secondary execution__btn--finalize" href="#">Finalizar</a>
-        {{/if}}
-      </footer>
+      {{#unless authorized 2}}
+        {{#unless routineExercise.done}}
+        <footer class="footer">
+          {{#if execution routineExercise.execution 0}}
+            <a class="btn execution__btn--initial" href="#">Iniciar exercício</a>
+          {{else}}
+            <a class="btn btn--secondary execution__btn--finalize" href="#">Finalizar exercício</a>
+          {{/if}}
+        </footer>
+        {{/unless}}
+      {{/unless}}
     </div>
 
-    {{#if execution routineExercise.execution 0}}
-    <section class="modal modal--active">
-      <div class="modal__content">
-        <h1 class="modal__title">{{routineExercise.exerciseObj.name}}</h1>
-        <h2 class="modal__caption">Força!</h2>
-        <a class="modal__btn execution__btn--initial" href="#">Iniciar</a>
-      </div>
-    </section>
-    {{/if}}
+    {{#unless authorized 2}}
+      {{#unless routineExercise.done}}
+        {{#if execution routineExercise.execution 0}}
+        <section class="modal modal--active">
+          <div class="modal__content">
+            <h1 class="modal__title">{{routineExercise.exerciseObj.name}}</h1>
+            <h2 class="modal__caption">Força!</h2>
+            <a class="modal__btn execution__btn--initial" href="#">Iniciar</a>
+          </div>
+        </section>
+        {{/if}}
+      {{/unless}}
+    {{/unless}}
   </main>
 </template>
