Updating logic to historicals

--- a/client/stylesheets/application.scss
+++ b/client/stylesheets/application.scss
@@ -28,4 +28,5 @@
 @import "components/messages";
 @import "components/modal";
 @import "components/nav";
+@import "components/print";
 @import "components/reason";
