--- a/client/views/routine/show.html
+++ b/client/views/routine/show.html
@@ -99,7 +99,7 @@
             {{#if execution routine.execution 0}}
               <a class="btn execution__btn--initial" href="#">Iniciar rotina</a>
             {{else}}
-              <a class="btn btn--secondary execution__btn--finalize" href="#">Finalizar rotina</a>
+              <a class="btn execution__btn--finalize" href="#">Finalizar rotina</a>
             {{/if}}
           </footer>
         {{/unless}}
