--- a/client/views/training/show.html
+++ b/client/views/training/show.html
@@ -98,7 +98,7 @@
           {{#if execution training.execution 0}}
             <a class="btn execution__btn--initial" href="#">Iniciar treinamento</a>
           {{else}}
-            <a class="btn btn--secondary execution__btn--finalize" href="#">Finalizar treinamento</a>
+            <a class="btn execution__btn--finalize" href="#">Finalizar treinamento</a>
           {{/if}}
         </footer>
       {{/if}}
