--- a/client/views/muscle/index.html
+++ b/client/views/muscle/index.html
@@ -2,31 +2,28 @@
   <header class="header">
     <div class="container">
       <h1 class="header__title">Músculos</h1>
-
       {{> nav}}
     </div>
   </header>
 
   <main class="main">
     <div class="container">
-      {{#if muscles.count}}
-        <ul class="list">
-          {{#each muscles}}
-          <li class="list__item">
-            <a class="list__link {{checkStatus status}}" href="/muscle/edit/{{_id}}">
-              {{name}}
-            </a>
-          </li>
-          {{/each}}
-        </ul>
-      {{else}}
-        <div class="messages">
-          <h1 class="messages__title">Opa!</h1>
-          <div class="messages__text">
-            <p>Ainda não existe nenhum <strong>músculo</strong> cadastrado.</p>
-          </div>
+      <form class="form form--search">
+        <div class="form__field">
+          <label class="form__label" for="search">Filtrar músculos</label>
+          <input class="form__input input--search" name="search" id="search" type="search" autocomplete="off" required>
         </div>
-      {{/if}}
+      </form>
+
+      <ol class="list">
+        {{#each muscles}}
+        <li class="list__item">
+          <a class="list__link {{checkStatus status}}" href="/muscle/edit/{{_id}}">
+            {{name}}
+          </a>
+        </li>
+        {{/each}}
+      </ol>
 
       <footer class="footer">
         <a class="btn" href="/muscle/create">Adicionar Músculo</a>
