Update for fixes bugs

--- a/client/stylesheets/components/_form.scss
+++ b/client/stylesheets/components/_form.scss
@@ -119,7 +119,7 @@
     text-decoration: none;
     text-transform: uppercase;
 
-    margin: 0 1rem;
+    margin: 0 1rem 1rem;
 
     &:hover,
     &:focus {
