--- a/client/views/user/register.html
+++ b/client/views/user/register.html
@@ -8,6 +8,10 @@
 
   <main class="main">
     <div class="container">
+      <figure class="logo__icon">
+        <img class="logo__image" src="/img/apple-icon-76x76.png" alt="Coach">
+      </figure>
+
       <form class="form form--register" action="post">
         <div class="form__field">
           <label class="form__label" for="name">Nome</label>
