--- a/client/stylesheets/components/_logo.scss
+++ b/client/stylesheets/components/_logo.scss
@@ -7,6 +7,13 @@
   padding: 2rem 0 1rem;
 }
 
+.logo__icon {
+  text-align: center;
+
+  margin: 0;
+  padding: 1rem 0 1.5rem;
+}
+
 .logo__image {
   max-width: 9rem;
 }
