--- a/client/views/user/login.html
+++ b/client/views/user/login.html
@@ -7,6 +7,10 @@
 
   <main class="main">
     <div class="container">
+      <figure class="logo__icon">
+        <img class="logo__image" src="/img/apple-icon-76x76.png" alt="Coach">
+      </figure>
+
       <form class="form form--login" action="post">
         <div class="form__field">
           <label class="form__label" for="email">E-mail</label>
