--- a/client/views/user/recovery.html
+++ b/client/views/user/recovery.html
@@ -8,6 +8,10 @@
 
   <main class="main">
     <div class="container">
+      <figure class="logo__icon">
+        <img class="logo__image" src="/img/apple-icon-76x76.png" alt="Coach">
+      </figure>
+
       {{#if resetPassword}}
         <form class="form form--recovery" action="post">
           <div class="form__field">
