--- a/client/views/exercise/image.html
+++ b/client/views/exercise/image.html
@@ -1,13 +1,17 @@
 <template name="exerciseImage">
   <header class="header">
     <div class="container">
-      <h1 class="header__title">{{ exercise.name }}</h1>
+      <h1 class="header__title">Adicionar imagens</h1>
       <a class="nav__btn nav__btn--right ion-android-arrow-forward" href="/exercise"></a>
     </div>
   </header>
 
   <main class="main">
     <div class="container">
+      <h1 class="section__title">
+        {{ exercise.name }}
+      </h1>
+
       <div class="form__field">
         <label class="form__label" for="image">Imagem</label>
         <input class="form__input--hidden images" type="file" id="image" name="image" accept="image/*" multiple>
