--- a/client/views/routine_exercise/show.html
+++ b/client/views/routine_exercise/show.html
@@ -38,7 +38,7 @@
         <div class="section__gallery">
           {{#each routineExercise.exerciseObj.images}}
           <figure class="section__figure">
-            <img class="section__image images" src="{{imagePath}}{{this}}" alt="Imagem do exercício">
+            <img class="section__image images" src="{{imageExercisePath}}{{this}}" alt="Imagem do exercício">
           </figure>
           {{/each}}
         </div>
