--- a/client/views/user/historical.html
+++ b/client/views/user/historical.html
@@ -38,14 +38,16 @@
               </ul>
             </div>
 
-            <div class="print__group">
-              <p class="print__description">Séries</p>
-              <p class="print__text">{{sets}}</p>
-            </div>
+            <div class="print__columns">
+              <div class="print__group">
+                <p class="print__description">Séries</p>
+                <p class="print__text">{{sets}}</p>
+              </div>
 
-            <div class="print__group">
-              <p class="print__description">Repetições</p>
-              <p class="print__text">{{reps}}</p>
+              <div class="print__group">
+                <p class="print__description">Repetições</p>
+                <p class="print__text">{{reps}}</p>
+              </div>
             </div>
           </section>
           {{/each}}
