--- a/client/stylesheets/components/_btn.scss
+++ b/client/stylesheets/components/_btn.scss
@@ -9,7 +9,7 @@
   line-height: 3.5rem;
 
   color: $white;
-  font-size: 1rem;
+  font-size: .9rem;
   font-weight: 600;
   text-align: center;
   text-decoration: none;
@@ -41,5 +41,6 @@
   .btn {
     height: 4rem;
     line-height: 4rem;
+    font-size: 1.1rem;
   }
 }
