--- a/client/stylesheets/components/_list.scss
+++ b/client/stylesheets/components/_list.scss
@@ -49,6 +49,7 @@
 
 .list__link {
   display: block;
+  height: 3.5rem;
 
   color: lighten($black, 30%);
   font-size: .9rem;
@@ -57,10 +58,12 @@
   text-decoration: none;
   text-transform: uppercase;
 
+  padding: 0 1rem;
+
+  overflow: hidden;
   background: rgba($black, .1);
 
   @include transition(.15s ease);
-
 
   &:hover {
     box-shadow: inset 0 0 10rem rgba($black, .1);
@@ -108,6 +111,7 @@
 
 
   .list__link {
+    height: 4rem;
     font-size: 1rem;
   }
 }
