--- a/client/stylesheets/layout/_header.scss
+++ b/client/stylesheets/layout/_header.scss
@@ -17,7 +17,7 @@
 
 .header__title {
   color: $white;
-  font-size: 1rem;
+  font-size: .9rem;
   text-align: center;
 }
 
@@ -29,6 +29,6 @@
   }
 
   .header__title {
-    font-size: 1.2rem;
+    font-size: 1.1rem;
   }
 }
