--- a/client/views/training/search.html
+++ b/client/views/training/search.html
@@ -22,7 +22,7 @@
           <a class="list__link {{checkStatus profile.status}}" href="/training/{{_id}}">
             <figure class="list__figure">
               {{#if image profile.image }}
-                <img class="list__image" src="/cfs/files/userImages/{{ profile.image }}" alt="{{ profile.name }}">
+                <img class="list__image" src="{{ imageUserPath }}{{ profile.image }}" alt="{{ profile.name }}">
               {{/if}}
             </figure>
 
