--- a/client/views/routine_exercise/create.html
+++ b/client/views/routine_exercise/create.html
@@ -30,6 +30,21 @@
           <input class="form__input" type="number" id="reps" name="reps" required>
         </div>
 
+        <div class="form__field">
+          <label class="form__label" for="reps">Carga recomendada (kg)</label>
+          <input class="form__input" type="number" id="weight" name="weight" required>
+        </div>
+
+        <div class="form__field">
+          <label class="form__label" for="reps">Intervalo</label>
+          <input class="form__input" type="time" id="interval" name="interval" required>
+        </div>
+
+        <div class="form__field">
+          <label class="form__label" for="reps">Velocidade de execução</label>
+          <input class="form__input" type="time" id="speed" name="speed" required>
+        </div>
+
         <div class="form__submit">
           <input class="btn form__btn" type="submit" value="Cadastrar">
         </div>
