--- a/client/views/user/historical.html
+++ b/client/views/user/historical.html
@@ -38,7 +38,7 @@
               </ul>
             </div>
 
-            <div class="print__columns">
+            <div class="row--three">
               <div class="print__group">
                 <p class="print__description">Séries</p>
                 <p class="print__text">{{sets}}</p>
@@ -47,6 +47,23 @@
               <div class="print__group">
                 <p class="print__description">Repetições</p>
                 <p class="print__text">{{reps}}</p>
+              </div>
+
+              <div class="print__group">
+                <p class="print__description">Intervalo</p>
+                <p class="print__text">{{interval}}</p>
+              </div>
+            </div>
+
+            <div class="row--two">
+              <div class="print__group">
+                <p class="print__description">Carga recomendada</p>
+                <p class="print__text">{{weight}}kg</p>
+              </div>
+
+              <div class="print__group">
+                <p class="print__description">Velocidade de execução</p>
+                <p class="print__text">{{speed}}</p>
               </div>
             </div>
           </section>
