--- a/client/views/routine_exercise/edit.html
+++ b/client/views/routine_exercise/edit.html
@@ -30,7 +30,7 @@
     <div class="container">
       <h1 class="section__title">
         {{routineExercise.exerciseObj.name}}
-      </h1>      
+      </h1>
 
       <form class="form form--edit" action="post">
         <div class="form__field">
@@ -41,6 +41,21 @@
         <div class="form__field">
           <label class="form__label" for="reps">Repetições</label>
           <input class="form__input" type="number" id="reps" name="reps" value="{{routineExercise.reps}}" required>
+        </div>
+
+        <div class="form__field">
+          <label class="form__label" for="reps">Carga recomendada (kg)</label>
+          <input class="form__input" type="number" id="weight" name="weight" value="{{routineExercise.weight}}" required>
+        </div>
+
+        <div class="form__field">
+          <label class="form__label" for="reps">Intervalo</label>
+          <input class="form__input" type="time" id="interval" name="interval" value="{{routineExercise.interval}}" required>
+        </div>
+
+        <div class="form__field">
+          <label class="form__label" for="reps">Velocidade de execução</label>
+          <input class="form__input" type="time" id="speed" name="speed" value="{{routineExercise.speed}}" required>
         </div>
 
         <div class="form__submit">
