--- a/client/views/routine_exercise/show.html
+++ b/client/views/routine_exercise/show.html
@@ -68,7 +68,7 @@
             </div>
           </div>
 
-          <div class="row">
+          <div class="row row--three">
             <div class="section__group">
               <h2 class="section__caption">Séries</h2>
 
@@ -82,6 +82,32 @@
 
               <div class="section__text section__text--big">
                 <p class="reps">{{routineExercise.reps}}</p>
+              </div>
+            </div>
+
+            <div class="section__group">
+              <h2 class="section__caption">Carga recomandada</h2>
+
+              <div class="section__text section__text--big">
+                <p class="reps">{{routineExercise.weight}}kg</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="row row--two">
+            <div class="section__group">
+              <h2 class="section__caption">Intervalo</h2>
+
+              <div class="section__text section__text--big">
+                <p class="sets">{{routineExercise.interval}}</p>
+              </div>
+            </div>
+
+            <div class="section__group">
+              <h2 class="section__caption">Velocidade de execução</h2>
+
+              <div class="section__text section__text--big">
+                <p class="reps">{{routineExercise.speed}}</p>
               </div>
             </div>
           </div>
