--- a/client/stylesheets/components/_form.scss
+++ b/client/stylesheets/components/_form.scss
@@ -144,7 +144,9 @@
 // resets
 
 input[type=number]::-webkit-inner-spin-button,
-input[type=number]::-webkit-outer-spin-button {
+input[type=number]::-webkit-outer-spin-button,
+input[type=time]::-webkit-inner-spin-button,
+input[type=time]::-webkit-outer-spin-button {
   -webkit-appearance: none;
 }
 
